[OPENAPI] M01 and M05 DONE (miss some details about password recover)
